...
            with: exitButtonImage,
            target: self,
            action: nil)
        exitButton.tintColor = UIColor.ypRed
        exitButton.translatesAutoresizingMaskIntoConstraints = false
        
        exitButton.accessibilityIdentifier = "logoutButton"
        view.addSubview(profileImageView)
        view.addSubview(nameLabel)
        view.addSubview(usernameLabel)
        view.addSubview(descriptionLabel)
        view.addSubview(exitButton)
        
...



extension ProfileViewController{
    func showAlert(title: String, message: String, yesComplition: (() -> Void)? = nil){
        let alertController = UIAlertController(title: title, message: message, preferredStyle: .alert)
        let yesAction = UIAlertAction(title: "Да", style: .cancel) { _ in
            yesComplition?()
        }
        let noAction = UIAlertAction(title: "Нет", style: .default)
        alertController.addAction(yesAction)
        alertController.addAction(noAction)
        alertController.preferredAction = noAction
...
