...
                                <connections>
                                    <outlet property="delegate" destination="aeT-gB-WTa" id="jBx-Df-Fm8"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QeE-6n-I3E">
                                <rect key="frame" x="8" y="8" width="40" height="40"/>
                                <accessibility key="accessibilityConfiguration" identifier="NavBackButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="40" id="TTU-TB-vAP"/>
                                    <constraint firstAttribute="height" constant="40" id="sg2-YD-nAE"/>
                                </constraints>
                                <color key="tintColor" name="YP White"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
...
                                    <constraint firstAttribute="height" constant="60" id="Ydm-gq-mmS"/>
                                    <constraint firstAttribute="width" constant="60" id="er2-SX-5G3"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djo-E2-oe1">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="MZa-JG-lw1"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Войти">
                                    <fontDescription key="titleFontDescription" type="boldSystem" pointSize="17"/>
...
